before change to boilerplate

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,16 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.schmosbyy.mobtimer
-pluginName = Mob-Timer
+pluginName = Mob Timer
 pluginRepositoryUrl = https://github.com/schmosbyy/Mob-Timer
-# SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 233
 pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
+platformType = PS
 platformVersion = 2023.3.8
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
