--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,7 @@ pluginVersion = 1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 240
-pluginUntilBuild = 244.*
-
+#plluginUntilBuild = 244.*
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = PS
 platformVersion = 2024.2
